fixed bug (test scroll overflow)

--- a/exelt/assets/css/about.css
+++ b/exelt/assets/css/about.css
@@ -32,4 +32,7 @@
         padding-top: 50px;
         padding-bottom: 50px;
     }
+    .gallery.js-flickity {
+        height: 480px!important;
+    }
 }
