--- a/exelt/assets/css/main.css
+++ b/exelt/assets/css/main.css
@@ -124,7 +124,7 @@
 
     /* scrollbar */
     .scrollbar-style {
-        overflow-y: auto;
+        overflow: auto;
     }
 
     body::-webkit-scrollbar,
